add tiled extension and fix some bugs